--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.2.1</version>
 	</parent>
 	<groupId>com.doubledee</groupId>
 	<artifactId>ultrastar</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ultrastar</name>
-	<description>Ultrastar Library</description>
+	<version>0.0.2-SNAPSHOT</version>
+	<name>UltrastarCatalog</name>
+	<description>Ultrastar Catalog</description>
 	<!--packaging>war</packaging-->
-
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -65,7 +60,7 @@
 		<dependency>
 			<groupId>org.spockframework</groupId>
 			<artifactId>spock-core</artifactId>
-			<version>1.3-groovy-2.5</version>
+			<version>2.4-M1-groovy-4.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -82,8 +77,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<configuration>
+							<mainClass>com.doubledee.ultrastar.UltrastarApplication</mainClass>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
-
+	<properties>
+		<start-class>com.doubledee.ultrastar.UltrastarApplication</start-class>
+	</properties>
 </project>
